Add or update the Azure App Service build and deployment workflow config

--- a/.github/workflows/master_cippdx56v.yml
+++ b/.github/workflows/master_cippdx56v.yml
@@ -15,11 +15,21 @@ env:
 jobs:
   deploy:
     runs-on: windows-latest
-    
+    permissions:
+      id-token: write #This is required for requesting the JWT
+      contents: read #This is required for actions/checkout
+
     steps:
       - name: 'Checkout GitHub Action'
         uses: actions/checkout@v4
       
+      - name: Login to Azure
+        uses: azure/login@v2
+        with:
+          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_B4CAF11BFD6343949C2A570EC4AAD7F0 }}
+          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_60FDCD74AC4641D1924734F5FBB85390 }}
+          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_BA0696FC42B84A5399C89A9C8FEEE397 }}
+
       - name: 'Run Azure Functions Action'
         uses: Azure/functions-action@v1
         id: fa
@@ -27,4 +37,4 @@ jobs:
           app-name: 'cippdx56v'
           slot-name: 'Production'
           package: ${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_65A83EDE84F74AAEAD872531EADEA212 }}
+          
